# tiny_agent_cli

./: .gitignore  CMakeLists.txt  README.md  config.yaml.example
.github/workflows/: ci.yml
src/: agent_loop.cpp  agent_loop.hpp  context_builder.cpp  context_builder.hpp  llmconfig.cpp  llmconfig.hpp  main.cpp  mcp_client.cpp  mcp_client.hpp  memory_store.cpp  memory_store.hpp  openai_stream_client.cpp  openai_stream_client.hpp  skills_loader.cpp  skills_loader.hpp  tiny_agent.cpp  tiny_agent.hpp  tools.cpp  tools.hpp
